TerraLockCLI/missing-from-tf-1776632906.tf
// Generated by TerraLock

resource "aws_instance" "instance_2" {
  ami = "ami-03e091ef64f3907f8"
  instance_type = "t3.micro"
  availability_zone = "eu-west-1b"
  subnet_id = "subnet-041f809fdc7592c81"
  tags = {
    Name = "Instance 2"
  }
}

resource "aws_instance" "other_app_server" {
  ami = "ami-01d0334e94e895e89"
  instance_type = "t3.micro"
  availability_zone = "eu-west-1a"
  subnet_id = "subnet-0fbe4fc3ba7e7c974"
  tags = {
    Name = "Other-app-server"
  }
}

resource "aws_instance" "instance_2_2" {
  ami = "ami-09c20105c9b62f893"
  instance_type = "t3.micro"
  availability_zone = "eu-west-1b"
  subnet_id = "subnet-041f809fdc7592c81"
  tags = {
    Name = "Instance 2"
  }
}

resource "aws_security_group" "sg_09d0bb54fec9f43b7" {
  name = "launch-wizard-5"
  description = "launch-wizard-5 created 2026-02-27T14:13:56.067Z"
  vpc_id = "vpc-06df955a0f7a27006"

  ingress {
    from_port = "22"
    to_port = "22"
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = "0"
    to_port = "0"
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-09d0bb54fec9f43b7"
  }
}

resource "aws_security_group" "sg_0c20434776be12fa2" {
  name = "launch-wizard-3"
  description = "launch-wizard-3 created 2026-01-19T17:07:51.117Z"
  vpc_id = "vpc-06df955a0f7a27006"

  ingress {
    from_port = "22"
    to_port = "22"
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = "0"
    to_port = "0"
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-0c20434776be12fa2"
  }
}

resource "aws_security_group" "sg_0409619b56b1890fc" {
  name = "launch-wizard-1"
  description = "launch-wizard-1 created 2026-01-13T14:58:11.398Z"
  vpc_id = "vpc-06df955a0f7a27006"

  ingress {
    from_port = "22"
    to_port = "22"
    protocol = "tcp"
    cidr_blocks = ["149.153.251.65/32"]
  }

  egress {
    from_port = "0"
    to_port = "0"
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-0409619b56b1890fc"
  }
}

resource "aws_security_group" "eks_cluster_sg_clouddemo_eks_837801256" {
  name = "eks-cluster-sg-clouddemo-eks-837801256"
  description = "EKS created security group applied to ENI that is attached to EKS Control Plane master nodes, as well as any managed workloads."
  vpc_id = "vpc-0026d1dd74c5b66cd"

  ingress {
    from_port = "0"
    to_port = "0"
    protocol = "-1"
  }

  egress {
    from_port = "0"
    to_port = "0"
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "eks-cluster-sg-clouddemo-eks-837801256"
  }
}

resource "aws_security_group" "sg_0bf40e86b6fb39be1" {
  name = "k8s-elb-a7393b43deb0944c7a6ab901890b6133"
  description = "Security group for Kubernetes ELB a7393b43deb0944c7a6ab901890b6133 (default/frontend)"
  vpc_id = "vpc-0026d1dd74c5b66cd"

  ingress {
    from_port = "80"
    to_port = "80"
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = "3"
    to_port = "4"
    protocol = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = "0"
    to_port = "0"
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-0bf40e86b6fb39be1"
  }
}

resource "aws_security_group" "sg_0ec89451dfef00962" {
  name = "launch-wizard-2"
  description = "launch-wizard-2 created 2026-01-13T14:58:49.139Z"
  vpc_id = "vpc-06df955a0f7a27006"

  ingress {
    from_port = "22"
    to_port = "22"
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = "0"
    to_port = "0"
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-0ec89451dfef00962"
  }
}

resource "aws_security_group" "sg_044db9d4d007934d4" {
  name = "SETUSG"
  description = "xxxxxxx"
  vpc_id = "vpc-091d12c1f677d35d0"

  ingress {
    from_port = "5000"
    to_port = "5000"
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = "0"
    to_port = "0"
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-044db9d4d007934d4"
  }
}

resource "aws_security_group" "eksctl_clouddemo_eks_clustercontrolplanesecuritygroup" {
  name = "eksctl-clouddemo-eks-cluster-ControlPlaneSecurityGroup-JWaH3f6Fw7BQ"
  description = "Communication between the control plane and worker nodegroups"
  vpc_id = "vpc-0026d1dd74c5b66cd"

  egress {
    from_port = "0"
    to_port = "0"
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "eksctl-clouddemo-eks-cluster/ControlPlaneSecurityGroup"
  }
}

resource "aws_security_group" "eksctl_clouddemo_eks_clusterclustersharednodesecuritygroup" {
  name = "eksctl-clouddemo-eks-cluster-ClusterSharedNodeSecurityGroup-SVdgjovPfX7h"
  description = "Communication between all nodes in the cluster"
  vpc_id = "vpc-0026d1dd74c5b66cd"

  ingress {
    from_port = "0"
    to_port = "0"
    protocol = "-1"
  }

  egress {
    from_port = "0"
    to_port = "0"
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "eksctl-clouddemo-eks-cluster/ClusterSharedNodeSecurityGroup"
  }
}

resource "aws_security_group" "sg_0362258001f35fed6" {
  name = "launch-wizard-4"
  description = "launch-wizard-4 created 2026-01-19T19:40:24.627Z"
  vpc_id = "vpc-06df955a0f7a27006"

  ingress {
    from_port = "22"
    to_port = "22"
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = "0"
    to_port = "0"
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-0362258001f35fed6"
  }
}

resource "aws_iam_role" "eksctl_clouddemo_eks_addon_iamserviceaccount__role1_w5dlesk44vjy" {
  name = "eksctl-clouddemo-eks-addon-iamserviceaccount--Role1-W5DLeSk44VjY"
  max_session_duration = 3600
  assume_role_policy = <<POLICY
{
    "Version": "2012-10-17",
    "Statement": [
      {
        "Effect": "Allow",
        "Principal": {
          "Federated": "arn:aws:iam::060473539898:oidc-provider/oidc.eks.eu-west-1.amazonaws.com/id/78C4BB13F1801E89CA534881926B04F2"
        },
        "Action": "sts:AssumeRoleWithWebIdentity",
        "Condition": {
          "StringEquals": {
            "oidc.eks.eu-west-1.amazonaws.com/id/78C4BB13F1801E89CA534881926B04F2:aud": "sts.amazonaws.com",
            "oidc.eks.eu-west-1.amazonaws.com/id/78C4BB13F1801E89CA534881926B04F2:sub": "system:serviceaccount:kube-system:ebs-csi-controller-sa"
          }
        }
      }
    ]
  }
POLICY
}

resource "aws_iam_role" "eksctl_clouddemo_eks_cluster_servicerole_binrpbijsbrf" {
  name = "eksctl-clouddemo-eks-cluster-ServiceRole-BiNRPbiJSbrf"
  max_session_duration = 3600
  assume_role_policy = <<POLICY
{
    "Version": "2012-10-17",
    "Statement": [
      {
        "Effect": "Allow",
        "Principal": {
          "Service": "eks.amazonaws.com"
        },
        "Action": [
          "sts:AssumeRole",
          "sts:TagSession"
        ]
      }
    ]
  }
POLICY
}

resource "aws_iam_role" "eksctl_clouddemo_eks_nodegroup_sta_nodeinstancerole_8fjdatm0rty7" {
  name = "eksctl-clouddemo-eks-nodegroup-sta-NodeInstanceRole-8fJDatM0RTy7"
  max_session_duration = 3600
  assume_role_policy = <<POLICY
{
    "Version": "2012-10-17",
    "Statement": [
      {
        "Effect": "Allow",
        "Principal": {
          "Service": "ec2.amazonaws.com"
        },
        "Action": "sts:AssumeRole"
      }
    ]
  }
POLICY
}
resource "aws_vpc" "setu_vpc" {
  cidr_block = "10.0.0.0/24"

  tags = {
    Name = "SETU-VPC"
  }
}
resource "aws_vpc" "eksctl_clouddemo_eks_clustervpc" {
  cidr_block = "192.168.0.0/16"

  tags = {
    Name = "eksctl-clouddemo-eks-cluster/VPC"
  }
}
